# crypto-orderbook-dump

./: .gitignore  pyproject.toml
.github/workflows/: kaggle-automation.yml
crypto_orderbook_dump/: binance_orderbook_dump.py  convert_to_parquet.py  download_and_convert.py  download_orderbook.py  main.py  upload_hugging_face.py
