[project]
name = "crypto-orderbook-dump"
version = "1.0.0"
description = "A tool to dump cryptocurrency order book data."
requires-python = "~=3.12.0"
dependencies = [
    "aiohttp>=3.13.3",
    "huggingface-hub>=1.6.0",
    "kaggle>=2.0.0",
    "polars>=1.38.1",
    "python-dotenv>=1.2.2",
    "websockets>=16.0",
]
